# ai_module

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-ai.yml
inference_module/app/api/v1/: inference.py
inference_module/app/services/: fallback_service.py  inference_service.py  model_loader.py
inference_module/configs/: active_model.json  config.py
inference_module/weights/: classes.txt  classes_v2.txt
inference_module/weights/classifier_effnet/: efficientnet_b0_last.pt
inference_module/weights/classifier_effnet_finetuned/: best_effnet_b0.pt  best_effnet_b0_mixup.pt  efficientnet_b0_finetuned.pt  model.pt
inference_module/weights/classifier_yolo/: yolo_food_cls_11n.pt
inference_module/weights/classifier_yolo_finetuned/: args.yaml
inference_module/weights/detector/: best.pt  last.pt
inference_module/weights/yolo_cls_mixup/: args.yaml
infra/: main.tf  outputs.tf  training.tf  upload_initial_weights.py  variables.tf  verify_mlops.py
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/service/: main.tf  outputs.tf  variables.tf
llm_module/: .env.example
llm_module/app/: config.py
llm_module/app/routers/: nutrition_router.py  predict_router.py
llm_module/app/services/: multimodal_mock.py  nutrition_llm.py
proxy/: Dockerfile  entrypoint.sh  nginx.conf.template
scripts/: download_weights.py  entrypoint.sh
training/: data_loader.py  registry.py  train.py
(+18 files in other folders)
